@@ -1,0 +1,1 @@
+{"access_token": "BQC99apI2w4Mdxz5G2FcS7DiKdj0j8hrcfPnktBKUsWoWyKx9NbjCB_wQY12XGwWCyWJAlULXdV_aYK71zBH7_ACmS_Yeg6P2IDpPiygUbqYvg2bxQDRfdB66TKHxojJbx2nwIS39tmW7Vo3NB5YzzVa1RCpePQX4_zCnDUVrPsUtz2qxFUy3yTbbsPqE19lxYsMOqHwvKfN-tmN5kOKnL5kyEkEWrRbsqwKk1lFtSIdUu21k5uwsFCCqPl4hfaADw4bd85PfLbph1NWIW_2", "token_type": "Bearer", "expires_in": 3600, "refresh_token": "AQD6mLaZhn0quJB1j9PWbEmSCe7tg4zMJ8hobTYyTbGdNrdq7kzEtQ8bwY_dzkn-zgy9dGg6W-phA1_jIb87CMQh8wVM3oq4sUcQeUVNSC-qp0ivG9RCg7tU5zwK5fV67GM", "scope": "playlist-read-private playlist-read-collaborative playlist-modify-private playlist-modify-public", "expires_at": 1720112023}
