@@ -3,7 +3,6 @@ from spotipy.oauth2 import SpotifyOAuth
 
 # Spotify API credentials
 
-
 # Authentication scope
 scope = 'playlist-read-private playlist-read-collaborative playlist-modify-private playlist-modify-public'
 
@@ -14,6 +13,8 @@ sp = spotipy.Spotify(auth_manager=SpotifyOAuth(client_id=client_id,
                                                scope=scope))
 DumpList = 'SpotipySecondary'
 playlist_name = 'SpotipyPrimary'
+
+
 song_names = ["Brazil", "Hello","Goodbye","Greetings"]
 song_name = "Hello"
 #input("Enter song name")
@@ -43,9 +44,13 @@ def display_playlist_tracks(playlist_name):
         track = item['track']
         print(f"{idx+1}. {track['name']} by {', '.join([artist['name'] for artist in track['artists']])}")
 
+
+'''
 # Example usage:
 playlist_name = 'SpotipyPrimary'
 display_playlist_tracks(playlist_name)
+'''
+
 
 
 def create_playlist_if_not_exists(playlist_name):
@@ -102,10 +107,6 @@ def add_songs_to_playlist(playlist_id, song_names):
 
 
 
-
-
-
-
 def SongTransferPrimaryToSecondary(PrimaryPlaylist_id, SecondaryPlaylist_id, song_name):
     # Get the IDs of the primary and secondary playlists 
     if PrimaryPlaylist_id is None or SecondaryPlaylist_id is None:
@@ -131,7 +132,6 @@ def SongTransferPrimaryToSecondary(PrimaryPlaylist_id, SecondaryPlaylist_id, son
     print(f"Song '{song_name}' transferred from '{PrimaryPlaylist_id}' to '{SecondaryPlaylist_id}'.")
 
 
-
 #Function Calls 
 PrimaryPlaylist_id = create_playlist_if_not_exists(playlist_name)
 print (PrimaryPlaylist_id)
@@ -145,4 +145,4 @@ print (SecondaryPlaylist_id)
 # Add the track to the playlist 
 add_songs_to_playlist(PrimaryPlaylist_id, song_names)
 
-//SongTransferPrimaryToSecondary(PrimaryPlaylist_id, SecondaryPlaylist_id, song_name)
+SongTransferPrimaryToSecondary(PrimaryPlaylist_id, SecondaryPlaylist_id, song_name)
