@@ -1,0 +1,3 @@
+client_id = 'd91a102c99ae4fee9205b7f2c23f37f1'
+client_secret = '11cecf5bbb8142e286d546fa24430140'
+redirect_uri = 'http://localhost:8888/callback'
